# VkTestSite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  compile_shaders.ps1  compile_shaders.sh  vcpkg.json
CMake/: Vcpkg.cmake
res/models/light_test/: lightTest.blend  lightTest.gltf
res/shaders/: lighting.slang  test.slang  test.slang.spv  test.vert
res/shaders/clustered_forward/: cfr_debug.ep.slang  clusters.cmp.slang  forward.ep.slang  hi_z_downsample.cmp.slang  old_clusters.cmp.slang  pre_depth.ep.slang
res/shaders/deferred/: geometry.ep.slang  geometry.slang  light.ep.slang  light.slang  lighting.slang
src/: BufferUtils.cpp  Camera.h  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  ImGUIStyle.h  Light.h  Mesh.h  Mesh.tpp  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  QueueFamilyIndices.cpp  ShaderModule.cpp  ShaderModule.h  StagingBuffer.h  Swapchain.cpp  Swapchain.h  Texture.h  TextureManager.cpp  TextureManager.h  TextureWorkersPool.h  TracyLogSink.h  TransferThread.h  Transform.h  Ubo.h  Ubo.tpp  Vertex.h  VkTestSiteApp.cpp  VkTestSiteApp.h  VmaUsage.cpp  main.cpp  utils.cpp
src/vr/: XrSystem.cpp  XrSystem.h  XrUtils.cpp
vcpkg-overlays/ports/tracy/: deps.patch  portfile.cmake  vcpkg.json
vcpkg-overlays/ports/usearch/: portfile.cmake
